--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.sketch
+*.fig
+*.xd
+.DS_Store
+.prettierignore
 
 npm-debug.log*
 yarn-debug.log*
